<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.deledzis.localshare.presentation.viewmodel.register.RegisterViewModel" />

        <variable
            name="backHandler"
            type="com.deledzis.localshare.presentation.screens.register.IBackHandler" />

        <import type="android.text.TextUtils" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_32dp">

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/TextView.Header1"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:text="@string/header_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_name_field"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_42dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_name_field" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_18dp"
                    android:hint="@string/label_name">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password_field"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_42dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_name_field">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_password_field" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_18dp"
                    android:hint="@string/label_password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/text_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_64dp"
                android:layout_marginEnd="@dimen/size_32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_password_field">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_in"
                    style="@style/Button.Secondary"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> backHandler.handleBackClicked()}"
                    app:icon="@drawable/ic_arrow_left" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_to_register"
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_12dp"
                    android:onClick="@{() -> viewModel.register()}"
                    android:text="@string/btn_register"
                    app:icon="@drawable/ic_arrow_right" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>