<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.deledzis.localshare.presentation.screens.signin.SignInViewModel" />

        <variable
            name="controller"
            type="com.deledzis.localshare.presentation.screens.signin.ISignInActionsHandler" />

        <import type="android.text.TextUtils" />

        <import type="com.deledzis.localshare.infrastructure.R" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_32dp">

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/TextView.Header1"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:text="@string/header_welcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_name_field"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginLeft="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_42dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_name_field" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_18dp"
                    android:layout_marginLeft="@dimen/size_18dp"
                    android:hint="@string/label_name">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_email_error"
                style="@style/TextView.ErrorLabel"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4dp"
                android:layout_marginEnd="@dimen/size_32dp"
                android:layout_marginRight="@dimen/size_32dp"
                android:maxLines="1"
                android:text="@{viewModel.emailError}"
                app:layout_constraintEnd_toEndOf="@id/ll_name_field"
                app:layout_constraintStart_toStartOf="@id/ll_name_field"
                app:layout_constraintTop_toBottomOf="@id/ll_name_field"
                tools:text="Введите email" />

            <LinearLayout
                android:id="@+id/ll_password_field"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginLeft="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_42dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_name_field">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_password_field" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_18dp"
                    android:layout_marginLeft="@dimen/size_18dp"
                    android:hint="@string/label_password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/text_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_password_error"
                style="@style/TextView.ErrorLabel"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4dp"
                android:layout_marginEnd="@dimen/size_32dp"
                android:layout_marginRight="@dimen/size_32dp"
                android:maxLines="1"
                android:text="@{viewModel.passwordError}"
                app:layout_constraintEnd_toEndOf="@id/ll_password_field"
                app:layout_constraintStart_toStartOf="@id/ll_password_field"
                app:layout_constraintTop_toBottomOf="@id/ll_password_field"
                tools:text="Введите пароль" />

            <FrameLayout
                android:id="@+id/btn_sign_in"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_64dp"
                android:layout_marginEnd="@dimen/size_32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_password_field">

                <com.google.android.material.button.MaterialButton
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="@{!viewModel.loading}"
                    android:enabled="@{!viewModel.loading &amp;&amp; !viewModel.inTransition}"
                    android:onClick="@{() -> viewModel.login()}"
                    android:text="@string/btn_sign_in"
                    app:icon="@drawable/ic_arrow_right" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_70dp"
                    android:clickable="false"
                    android:focusable="false"
                    app:cardBackgroundColor="@color/transparent"
                    app:cardCornerRadius="@dimen/size_22dp"
                    app:cardElevation="@dimen/size_0dp"
                    app:cardUseCompatPadding="false">

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:indeterminate="true"
                        app:progress_tint="@{R.color.white_100}"
                        app:visibility="@{viewModel.loading}" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_forget_password"
                style="@style/Button.Text"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_32dp"
                android:enabled="@{!viewModel.inTransition}"
                android:onClick="@{controller::handleForgetPasswordClicked}"
                android:text="@string/btn_forget_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_to_register"
                style="@style/Button.Secondary"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_24dp"
                android:layout_marginEnd="@dimen/size_32dp"
                android:enabled="@{!viewModel.inTransition}"
                android:onClick="@{controller::handleRegisterClicked}"
                android:text="@string/btn_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_forget_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>