<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.deledzis.localshare.presentation.viewmodel.forgetpassword.ForgetPasswordViewModel" />

        <variable
            name="backHandler"
            type="com.deledzis.localshare.presentation.screens.forgetpassword.IForgetPasswordActionsHandler" />

        <import type="android.text.TextUtils" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_32dp">

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/TextView.Header1"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:text="@string/header_forget_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_name_field"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_42dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_name_field" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_18dp"
                    android:hint="@string/label_name">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_email_error"
                style="@style/TextView.ErrorLabel"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4dp"
                android:layout_marginEnd="@dimen/size_32dp"
                android:maxLines="1"
                android:text="@{viewModel.emailError}"
                app:layout_constraintEnd_toEndOf="@id/ll_name_field"
                app:layout_constraintStart_toStartOf="@id/ll_name_field"
                app:layout_constraintTop_toBottomOf="@id/ll_name_field"
                tools:text="Введите email" />

            <LinearLayout
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_32dp"
                android:layout_marginTop="@dimen/size_64dp"
                android:layout_marginEnd="@dimen/size_32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_name_field">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_in"
                    style="@style/Button.Secondary"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:clickable="@{!viewModel.loading}"
                    android:enabled="@{!viewModel.loading}"
                    android:onClick="@{() -> backHandler.handleBackClicked()}"
                    app:icon="@drawable/ic_arrow_left" />

                <FrameLayout
                    android:id="@+id/btn_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_12dp">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="@{!viewModel.loading}"
                        android:enabled="@{!viewModel.loading}"
                        android:onClick="@{() -> viewModel.forgetPassword()}"
                        android:text="@string/btn_restore_password" />

                    <ProgressBar
                        android:layout_width="@dimen/size_32dp"
                        android:layout_height="@dimen/size_32dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="@dimen/size_8dp"
                        android:indeterminateTint="@color/white_100"
                        app:visibility="@{viewModel.loading}" />

                </FrameLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>