<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.deledzis.localshare.presentation.screens.locationpasswords.add.AddLocationPasswordViewModel" />

    </data>

    <FrameLayout
        android:id="@+id/add_bottom_sheet_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:behavior_hideable="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgr_bottom_navigation">

            <androidx.core.widget.NestedScrollView
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_welcome"
                        style="@style/TextView.Header2"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_28dp"
                        android:text="@string/header_add_location_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/block_description"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size_32dp"
                        android:layout_marginLeft="@dimen/size_32dp"
                        android:layout_marginTop="@dimen/size_48dp"
                        android:layout_marginEnd="@dimen/size_32dp"
                        android:layout_marginRight="@dimen/size_32dp"
                        app:cardBackgroundColor="@color/gray_700"
                        app:cardCornerRadius="@dimen/size_16dp"
                        app:cardElevation="@dimen/size_0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_welcome">

                        <LinearLayout
                            android:id="@+id/ll_description_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_24dp"
                            android:layout_marginLeft="@dimen/size_24dp"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_welcome">

                            <ImageView
                                android:layout_width="@dimen/size_24dp"
                                android:layout_height="@dimen/size_24dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_description" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/til_description"
                                style="@style/TextInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size_14dp"
                                android:layout_marginLeft="@dimen/size_14dp"
                                android:layout_marginTop="@dimen/size_4dp"
                                android:layout_marginBottom="@dimen/size_4dp"
                                android:hint="@string/label_description"
                                app:boxStrokeColor="@color/color_light_text_field_activation_stroke">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tie_description"
                                    style="@style/EditText.SingleLine"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text"
                                    android:text="@={viewModel.description}" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <FrameLayout
                        android:id="@+id/btn_add"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size_32dp"
                        android:layout_marginTop="@dimen/size_32dp"
                        android:layout_marginEnd="@dimen/size_32dp"
                        android:layout_marginBottom="@dimen/size_64dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/block_description">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_70dp"
                            android:clickable="false"
                            android:focusable="false"
                            app:cardBackgroundColor="@color/transparent"
                            app:cardCornerRadius="@dimen/size_22dp"
                            app:cardElevation="@dimen/size_0dp"
                            app:cardUseCompatPadding="false">

                            <ProgressBar
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:indeterminate="true"
                                app:progress_tint="@{@color/white_100}"
                                app:visibility="@{viewModel.loading}" />

                            <com.google.android.material.button.MaterialButton
                                style="@style/Button.Primary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="@{viewModel.description != null &amp;&amp; !viewModel.description.empty}"
                                android:enabled="@{viewModel.description != null &amp;&amp; !viewModel.description.empty}"
                                android:onClick="@{() -> viewModel.createLocationPassword()}"
                                android:text="@string/btn_create"
                                app:icon="@drawable/ic_plus" />

                        </androidx.cardview.widget.CardView>

                    </FrameLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>